<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.fingerpainter.viewmodel.BrushViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SelectBrush">

        <TextView
            android:id="@+id/previewBrushText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="16dp"
            android:text="@string/preview_brush"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/capRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/capRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="64dp"
            android:checkedButton="@id/roundRadioButton"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/brushWidthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewBrushText">

            <RadioButton
                android:id="@+id/roundRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{() -> viewmodel.onRadioClick(@string/round)}"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/round"
                android:checked="@{viewmodel.roundCap}"/>

            <RadioButton
                android:id="@+id/squareRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{() -> viewmodel.onRadioClick(@string/square)}"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/square"
                android:checked="@{viewmodel.squareCap}"/>

        </RadioGroup>

        <TextView
            android:id="@+id/brushWidthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="8dp"
            android:text="@string/width"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capRadioGroup" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toTopOf="@+id/brush_select_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brushWidthText">

            <Button
                android:id="@+id/minus10Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.onWidthClick(@string/minus10)}"
                android:text="@string/minus10" />

            <Button
                android:id="@+id/minus1Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.onWidthClick(@string/minus1)}"
                android:text="@string/minus1" />

            <TextView
                android:id="@+id/widthNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{Integer.toString(viewmodel.width)}"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plus1Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.onWidthClick(@string/plus1)}"
                android:text="@string/plus1" />

            <Button
                android:id="@+id/plus10Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewmodel.onWidthClick(@string/plus10)}"
                android:text="@string/plus10" />
        </LinearLayout>

        <Button
            android:id="@+id/brush_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="300dp"
            android:onClick="@{() -> viewmodel.onSelectClick()}"
            android:text="@string/select_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>